--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?qxz7xl');
-  src:  url('../fonts/icomoon.eot?qxz7xl#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?qxz7xl') format('truetype'),
-    url('../fonts/icomoon.woff?qxz7xl') format('woff'),
-    url('../fonts/icomoon.svg?qxz7xl#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?wft4ok');
+  src:  url('../fonts/icomoon.eot?wft4ok#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?wft4ok') format('truetype'),
+    url('../fonts/icomoon.woff?wft4ok') format('woff'),
+    url('../fonts/icomoon.svg?wft4ok#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -57,4 +57,7 @@
 }
 .icon-location:before {
   content: "\e947";
+}
+.icon-cross:before {
+  content: "\ea0f";
 }
