--- a/css/media.css
+++ b/css/media.css
@@ -95,27 +95,43 @@
 	.header__contacts {
 		text-align: center;
 	}
+	.menu{
+		margin-right: 15px;
+	}
 	.header__btn-menu {
 		display: block;
 	}
-	.menu ul {
+	.menu span::after{
+		font-family: 'icomoon';
+		content: "\f0c9";
+		color: #000;
+	}
+	.menu.active span::after{
+		font-family: 'icomoon';
+		content: "\ea0f";
+		font-size: 23px;
+	}
+	.menu ul{
 		display: none;
+	}
+	.menu.active ul {
+		display: block;
 		position: absolute;
 		left: 0;
 		right: 0;
 		z-index: 50;
 		margin-top: 16px;
 	}
-	.menu li {
+	.menu.active li {
 		display: block;
 	}
-	.menu a {
+	.menu.active a {
 		display: block;
 		background-color: #ffc222;
 		border-top: 1px solid #fff;
 		border-bottom: 1px solid #fff;
 	}
-	.menu li + li {
+	.menu.active li + li {
 		padding-left: 0;
 	}
 }
